Update to ALPHA11

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@
 name: BetterRaw
 author:  Ad5001
 version: 1.0
-api: [3.0.0-ALPHA10]
+api: [3.0.0-ALPHA10, 3.0.0-ALPHA11]
 main: Ad5001\BetterRaw\Main
 commands: []
 permissions: 
